deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-website

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
  namespace: restaurant-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant-container
          image: joshikunal/kunal:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: restaurant-storage
              mountPath: /usr/share/nginx/html  # Assuming this is where the site data is stored in the container
            - name: apache-config-volume
              mountPath: /etc/apache2/conf-enabled
              subPath: apache.conf
      volumes:
        - name: restaurant-storage
          persistentVolumeClaim:
            claimName: restaurant-pvc
        - name: apache-config-volume
          configMap:
            name: apache-config
      imagePullSecrets:
        - name: dockerhub-secret

---

apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: restaurant-website
spec:
  selector:
    app: restaurant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer  # Change this to LoadBalancer to expose it externally

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: restaurant-website
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: restaurant.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 80
